@@ -1,3 +1,5 @@
+* Prevent usage of paid invoice in draft statements
+
 Version 3.0.0 - 2013-10-21
 * Bug fixes (see mercurial logs for details)
 * Allow to use invoice to fill party and account on statement line
